# sycamore-salvo-template

./: .gitignore  Cargo.toml  README.md  debug.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/pages/: index.rs  list.rs  mod.rs  navbor.rs
