[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend = { path = "../frontend" }
salvo = { version = "0.24.4", features = ["serve-static"] }
tokio = { version = "1", features = ["macros"] }
sycamore = { version = "0.8.0-beta.7", features = ["ssr","web"] }
bonsaidb = { version = "0.4.1", features = ["local"] }
chrono = "0.4.19"
serde = "1.0.137"