[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontend = { path = "../frontend" }
salvo = { version = "0.37.9", features = ["serve-static"] }
tokio = { version = "1.25.0", features = ["macros"] }
sycamore = { version = "0.8.2", features = ["ssr","web"] }
bonsaidb = { version = "0.4.1", features = ["local"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = "1.0.152"